# polinews

./: .env.example  .gitignore  MVP.md  Polinews_Idea.docx  README.md  SAPIEN_DIRECTOR_QUESTIONS.md  SAPIEN_INTEGRATION_GUIDE.md  TECHNICAL_ARCHITECTURE.md  pyproject.toml
collector/: README.md  __init__.py  canonical_url.py  config.py  db.py  dedup.py  keypoints_generator.py  normalizer.py  parser.py  quiz_pool_generator.py  rss_collector.py
docs/: phase2_blockchain_architecture.md  whitepaper_polinews_mvp_it_en.md
docs/business_inputs/: README.md  polinews_revenue_plan.docx
docs/mvp_offchain/: MASTER_CHECKLIST.md  README.md
docs/mvp_offchain/governance/: board_template.md  calendar_4_weeks.md  env_naming.md  sla_mvp.md  (+1 more)
polinews/: __init__.py  config.py  main.py
polinews.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
polinews/api/: __init__.py  analytics.py  app.py  auth.py  dashboard.py  feed_story.py  quiz.py  rewards.py  sessions.py
polinews/auth/: __init__.py  jwt.py  magic_link.py
polinews/collector/: README.md  canonical_url.py  collector_logging.py  config.py  keypoints_generator.py  normalizer.py  quiz_pool_generator.py  rss_collector.py
polinews/db/: __init__.py  connection.py  schema.py
polinews/worker/: __init__.py  analytics_job.py  scheduler.py
scripts/: sync_github_issues.sh  validate_tracking.py
story_service/: __init__.py  app.py
tests/: e2e_walkthrough.py  test_canonical_url.py  test_dedup.py  test_keypoints_generator.py  test_normalizer.py  test_quiz_pool_generator.py  test_story_service.py
(+29 files in other folders)
